# serverinfo

./: .gitignore  README.md  client.py  client.sh  publish.sh  pyproject.toml  requirements.txt  server.py  server.sh
